--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Lee Carbon",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "path-to-regexp": "^6.2.1"
